--- a/front/index.html
+++ b/front/index.html
@@ -8,6 +8,8 @@
 	<script type="text/javascript" src="https://code.angularjs.org/1.5.8/angular-route.min.js"></script>
 	<script type="text/javascript" src="https://code.angularjs.org/1.5.8/angular-cookies.min.js"></script>
 	<script src="scripts.js"></script>
+	<script src="ctrls/mainCtrl.js"></script>
+	<script src="ctrls/wordbankCtrl.js"></script>
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 	<!-- <link rel="stylesheet" href=""> -->
