--- a/front/index.html
+++ b/front/index.html
@@ -12,20 +12,19 @@
 	<script src="ctrls/wordbankCtrl.js"></script>
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-	<!-- <link rel="stylesheet" href=""> -->
+	<link rel="stylesheet" href="compass/css/styles.css">
 </head>
 <body ng-controller="martiCtrl">
-	<div>
-		<h1>Marti's Study Room</h1>
-		<div>
-			<ul>
-				<li><a ng-href="#/">Review</a></li>
-				<li><a ng-href="#/wordbank">Word Bank</a></li>
-				<li><a ng-href="#/quiz">Quiz</a></li>
-			</ul>
+	<div id="navigation">
+		<div class="sub-nav" id="signin-bar"><div id="signin"><a>Sign In</a></div></div>
+		<div class="sub-nav" id="title-bar"><div id="title">Marti's Study Room</div></div>
+		<div class="sub-nav" id="menu-bar">
+			<div><a ng-href="#/">Review</a></div>
+			<div><a ng-href="#/quiz">Quiz</a></div>
+			<div><a ng-href="#/wordbank">Word Bank</a></div>
 		</div>
 	</div>
-	<div ng-view></div>
+	<div id="content" ng-view></div>
 
 </body>
 </html>
