--- a/front/index.html
+++ b/front/index.html
@@ -15,6 +15,7 @@
 	<script src="ctrls/mypageCtrl.js"></script>
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Poppins:400,500,600">
 	<link rel="stylesheet" href="compass/css/styles.css">
 </head>
 <body ng-controller="martiCtrl">
