Shared scope variable among the pages

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<script type="text/javascript" src="https://code.angularjs.org/1.5.8/angular-route.min.js"></script>
 	<script type="text/javascript" src="https://code.angularjs.org/1.5.8/angular-cookies.min.js"></script>
 	<script src="scripts.js"></script>
-	<script src="ctrls/martiCtrl.js"></script>
+	<script src="ctrls/homeCtrl.js"></script>
 	<script src="ctrls/quizCtrl.js"></script>
 	<script src="ctrls/wordbankCtrl.js"></script>
 	<script src="ctrls/signinCtrl.js"></script>
@@ -20,7 +20,7 @@
 	<link rel="stylesheet" href="compass/css/styles.css">
 </head>
 
-<body ng-controller="martiCtrl">
+<body ng-controller="homeCtrl">
 	<div id="navigation">
 		<!-- Sign In & Out -->
 		<div class="nav-row nav-signin" ng-hide="signedIn">
