--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<script src="ctrls/signinCtrl.js"></script>
 	<script src="ctrls/mypageCtrl.js"></script>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Poppins:400,500,600|Muli">
+	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Poppins:400,500,600|Muli|Libre+Franklin:400,500|Handlee">
 	<link rel="stylesheet" href="compass/css/styles.css">
 </head>
 
@@ -36,7 +36,7 @@
 		<!-- Menu -->
 		<div class="nav-row">
 			<div id="menu">
-				<div><a ng-href="#/"> Review </a></div>
+				<div><a ng-href="#/"> Home </a></div>
 				<div><a ng-href="#/quiz"> Quiz </a></div>
 				<div><a ng-href="#/wordbank"> Word Bank </a></div>
 				<div ng-if="signedIn"><a ng-href="#/mypage"> My Page </a></div>
